service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loganalyticssource
  name: loganalyticssource
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: loganalyticssource
  type: ClusterIP
